Apply background color to last selected text #112

--- a/src/app.css
+++ b/src/app.css
@@ -162,6 +162,10 @@ textarea {
 	cursor: pointer;
 }
 
+.hover {
+	background-color: var(--background-color);
+}
+
 .hover:hover {
 	background-color: var(--border-color);
 	transition: 0.2s;
