--- a/src/app.css
+++ b/src/app.css
@@ -60,7 +60,7 @@ textarea {
 	background-color: var(--header-background-color);
 }
 
-.header {
+.header_left, .header_right {
 	-webkit-position: sticky;
 	position: sticky;
 	z-index: 3;
@@ -73,7 +73,7 @@ textarea {
 	font-weight: 700;
 }
 
-.sign_in {
+.header_right {
 	margin: 0 0 0 auto;
 }
 
