--- a/src/app.css
+++ b/src/app.css
@@ -214,3 +214,12 @@ textarea {
 	color: black;
 	text-decoration: none;
 }
+
+.submit_button {
+	background-color: var(--blue-color);
+	color: white;
+	font-weight: 600;
+	border-color: var(--blue-color);
+	width: 100%;
+	box-sizing: border-box;
+}
