--- a/src/app.css
+++ b/src/app.css
@@ -217,3 +217,10 @@ textarea {
 	width: 100%;
 	box-sizing: border-box;
 }
+
+.width_limit {
+	margin-left: auto;
+	margin-right: auto;
+	width: 100%;
+	max-width: calc(500px + 2rem);
+}
