--- a/src/app.css
+++ b/src/app.css
@@ -23,7 +23,7 @@ input,
 button,
 select,
 textarea,
-.signin_button > div,
+.sign_in_button > div,
 .border_radius,
 .glass {
 	border-radius: 6px;
@@ -49,7 +49,7 @@ button {
 }
 
 select,
-.signin_button > div {
+.sign_in_button > div {
 	padding: 6px 12px;
 }
 
@@ -205,7 +205,7 @@ textarea {
 	border-radius: 0.5rem;
 }
 
-.signin_button {
+.sign_in_button {
 	text-decoration: none;
 }
 
