--- a/src/lib/app.css
+++ b/src/lib/app.css
@@ -158,6 +158,11 @@ textarea {
 	/* border: 1px solid red; */
 }
 
+.w-limit {
+	/* Similar to center_container*/
+	@apply mx-auto w-full max-w-[800px];
+}
+
 .padding_16px {
 	padding: 16px;
 }
@@ -219,8 +224,11 @@ textarea {
 }
 
 .width_limit {
-	margin-left: auto;
-	margin-right: auto;
+	margin: 0 auto;
 	width: 100%;
 	max-width: calc(500px + 2rem);
+}
+
+.w-limit {
+	@apply mx-auto w-full max-w-[calc(1100px+2rem)];
 }
