Create doc pages #580 change blur depth

--- a/src/lib/app.css
+++ b/src/lib/app.css
@@ -124,7 +124,7 @@ a:focus {
 	}
 
 	.glass {
-		@apply bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-80 bg-black text-white/60 fill-white/70;
+		@apply bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-80 bg-black text-white/60 fill-white/70;
 	}
 
 	[contenteditable='true']:empty::before {
