--- a/src/lib/app.css
+++ b/src/lib/app.css
@@ -127,6 +127,10 @@ a:focus {
 		@apply bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-80 bg-black text-white/60 fill-white/70;
 	}
 
+	.doc-base {
+		@apply bg-clip-padding backdrop-filter bg-opacity-80 bg-black text-white/60 fill-white/70;
+	}
+
 	[contenteditable='true']:empty::before {
 		content: attr(placeholder);
 		color: #ffffff70;
