Create doc pages #580 active check on this page

--- a/src/lib/app.css
+++ b/src/lib/app.css
@@ -17,6 +17,10 @@
 	--header-background-color: rgb(239 243 244 / 85%);
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
 a {
 	/* color: var(--link-color); */
 	text-decoration: none;
