--- a/src/lib/app.css
+++ b/src/lib/app.css
@@ -162,16 +162,17 @@ h2 {
 	@apply text-2xl font-bold pt-8 mt-1 mb-3 flex items-center -ms-9 ps-9;
 }
 
+h3 {
+	@apply text-xl font-semibold pt-6 mt-1 mb-2 flex items-center -ms-9 ps-9;
+}
+
 .permalink {
 	@apply bg-transparent text-transparent absolute left-0 rounded-md w-6 h-6 flex items-center justify-center transition;
 }
 
-h2:hover .permalink {
+h2:hover .permalink,
+h3:hover .permalink {
 	@apply bg-slate-700 text-slate-300;
-}
-
-h3 {
-	@apply text-xl mt-6 mb-2;
 }
 
 .category {
