Docs: Align the beginning of the main content #633

--- a/src/lib/app.css
+++ b/src/lib/app.css
@@ -159,11 +159,11 @@ h1 {
 }
 
 h2 {
-	@apply text-2xl font-bold pt-8 mt-1 mb-3 flex items-center -ms-9 ps-9;
+	@apply text-2xl font-bold mt-8 mb-3 flex items-center -ms-9 ps-9;
 }
 
 h3 {
-	@apply text-xl font-semibold pt-6 mt-1 mb-2 flex items-center -ms-9 ps-9;
+	@apply text-xl font-semibold mt-6 mb-2 flex items-center -ms-9 ps-9;
 }
 
 ol {
