Docs: Add an animation toggle #955

--- a/src/lib/app.css
+++ b/src/lib/app.css
@@ -140,6 +140,10 @@ a {
 	.glass-button {
 		@apply glass-bump-bg glass-text-3 glass-bump-bg-shine rounded-lg px-4 py-2 transition-all duration-300 hover:shadow-sm;
 	}
+
+	.glowing-icon {
+		@apply hover:fill-secondary hover:text-secondary dark:hover:fill-secondary-dark dark:hover:text-secondary-dark;
+	}
 }
 
 @layer utilities {
