--- a/src/lib/app.css
+++ b/src/lib/app.css
@@ -94,8 +94,12 @@ a {
 		@apply bg-inherit px-4 py-[10px];
 	}
 
-	svg {
+	/* svg {
 		@apply max-h-full min-h-full min-w-full max-w-full fill-current;
+	} */
+
+	svg {
+		@apply max-h-full max-w-full fill-current;
 	}
 
 	.center-container {
