Docs: Make it possible to apply escaped HTML strings to Markdown files #1216

--- a/src/lib/app.css
+++ b/src/lib/app.css
@@ -293,5 +293,7 @@ blockquote {
 }
 
 .flex-books > * {
-	max-width: calc((100% - 1rem * 2) / 3);
+	@apply flex items-center justify-center;
+
+	width: calc((100% - 1rem * 2) / 3);
 }
