Remove TODOs from the source code #1424

--- a/src/lib/app.css
+++ b/src/lib/app.css
@@ -63,8 +63,6 @@ a {
 		@apply overflow-hidden rounded-md border border-media-border bg-border;
 	} */
 
-	/* TODO: Remove unnecessary global styles */
-
 	a {
 		@apply transition;
 	}
@@ -111,7 +109,10 @@ a {
 	}
 
 	.card {
-		box-shadow: 0 0.1px 0.5px #0000000e, 0 0.4px 1.6px #00000014, 0 2px 7px #00000021;
+		box-shadow:
+			0 0.1px 0.5px #0000000e,
+			0 0.4px 1.6px #00000014,
+			0 2px 7px #00000021;
 		border-radius: 0.5rem;
 	}
 
